<resources>
    <string name="app_name">GitHub Search</string>
    <string name="search_button_text">Search</string>
    <string name="search_hint">Search</string>
    <string name="user_data_key">USER_DATA</string>
    <string name="user_score">Score: %1$s</string>
    <string name="user_login">Login: %1$s</string>
    <string name="user_id">ID: %1$s</string>
    <string name="menu_about">About</string>
    <string name="image_description">avatar</string>
    <string name="user_name">Name: %1$s</string>
    <string name="location">Location: %1$s</string>
    <string name="company">Company: %1$s</string>
    <string name="followers">Followers: %1$s</string>
    <string name="publicGists">Public Gists: %1$s</string>
    <string name="publicRepos">Public Repos: %1$s</string>
    <string name="lastUpdate">Last update: %1$s</string>
    <string name="accountCreated">Account created: %1$s</string>
    <string name="placeholder_url">url</string>
    <string name="url_key">URL_KEY</string>
    <string name="message_title">Network Error</string>
    <string name="message_text">Sorry!\nThis App requires an Internet Connection</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="quit">Quit</string>
    <string name="min_repos_hint">Min. # Repos</string>
    <string name="followers_hint">Followers</string>
    <string name="page_size_hint">Page Size</string>
    <string name="min_followers_hint">min. # followers</string>
    <string name="repos_hint">repos</string>
    <string name="app_version">%1$s\nv1.1.2</string>
    <string name="createdBy">Created By\nLuis Souza</string>
    <string name="company_name"><![CDATA[- App Dev Canada -]]></string>
    <string name="email_luis">appdevcanada@gmail.com</string>
    <string name="email">%1$s</string>
    <string name="site_luis">https://github.com/appdevcanada\nhttps://appdevcanada.github.io</string>
    <string name="site">%1$s</string>
    <string name="no_results">No results for %1$s </string>
    <string name="repos_key">REPOS_KEY</string>
    <string name="followers_key">FOLLOWERS_KEY</string>
    <string name="page_size_key">PAGE_SIZE_KEY</string>
</resources>
