<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="271dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:textAlignment="center">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/image_description"
                    android:scaleType="center"
                    app:srcCompat="@drawable/profile"
                    tools:srcCompat="@mipmap/luis_avatar_foreground" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtProjectNameAndVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="inherit"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/txtTeamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/createdBy"
                android:textAlignment="inherit"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textAlignment="inherit"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:text="@string/email"
                android:textAlignment="inherit"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/site"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>